// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconAlert /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconAlert /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconAlert /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconAlert /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconAlert /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconAlert /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconAlert /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconAlert /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconAlert /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconAlert /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconAlert /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconAlert /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M196.9 169.3c-4-4-6.3-9.2-6.7-14.8L187 94.8c0-25-21.2-45.1-49.1-48.4 0-1.2-.1-2.8-.1-4.3 0-3.3-2-6.4-5.1-7.6-5.4-1.9-10.5 2-10.4 7.1 0 2.1.1 3.7.1 4.8-27.9 3.3-49.6 23.3-49.6 48.3l-3.3 59.6c-.3 5.6-2.7 10.9-6.7 14.9L46 186v7h168v-7l-17.1-16.7zM110.6 202h38c0 10.5-8.3 18.6-18.8 18.6s-19.2-8.1-19.2-18.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconAlert /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
